# network

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily-pipeline.yml
data/: frederick_people.db
data/discoveries/: 2026-03-17.md  2026-03-18.md  2026-03-19.md  2026-03-20.md  2026-03-21.md  2026-03-22.md  2026-03-23.md  2026-03-24.md  2026-03-25.md  2026-03-26.md  2026-03-27.md  2026-03-28.md  2026-03-29.md  2026-03-30.md  2026-03-31.md  2026-04-01.md  2026-04-02.md  2026-04-03.md  2026-04-04.md  2026-04-05.md  2026-04-06.md  2026-04-07.md  2026-04-08.md  2026-04-09.md  2026-04-10.md  2026-04-11.md  2026-04-12.md  2026-04-13.md  2026-04-14.md  2026-04-15.md  2026-04-16.md  2026-04-17.md  2026-04-18.md  2026-04-19.md  2026-04-20.md  2026-04-21.md  2026-04-22.md  2026-04-23.md  2026-04-24.md  2026-04-25.md  (+88 more)
docs/: lessons-learned-bootstrap.md
sources/: frederick_sources.json
src/frederick_pipeline/: __init__.py  __main__.py  analyze.py  cli.py  config.py  db.py  extract.py  fetch.py
